--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-pxz (4.999.99~beta3+git659fc9b-1) UNRELEASED; urgency=medium
+pxz (4.999.99~beta3+git659fc9b-1) unstable; urgency=medium
 
   * New upstream version. (Closes: #706295)
   * Bump standards version to 3.9.4. 
 
- -- Holger Levsen <holger@debian.org>  Wed, 22 May 2013 16:17:00 +0200
+ -- Holger Levsen <holger@debian.org>  Mon, 27 May 2013 21:02:37 +0000
 
 pxz (4.999.99~beta2+git4774800-1) unstable; urgency=low
 
