--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pxz (4.999.99~beta3+git659fc9b-2) UNRELEASED; urgency=medium
+
+  * Bump Standards Version to 3.9.5, no changes needed.
+
+ -- Holger Levsen <holger@debian.org>  Mon, 04 Aug 2014 16:01:14 +0200
+
 pxz (4.999.99~beta3+git659fc9b-1) unstable; urgency=medium
 
   * New upstream version. (Closes: #706295)
