--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-pxz (4.999.99~beta3+git659fc9b-4) UNRELEASED; urgency=medium
+pxz (4.999.99~beta3+git659fc9b-4) unstable; urgency=medium
 
   * Add debian/patches/reproducible-build.patch to modify the Makefile to
     embed the date of the last modification of debian/changelog in the binary,
     instead of the meaningless build date.
   * Bump Standards Version to 3.9.6, no changes needed.
 
- -- Holger Levsen <holger@debian.org>  Thu, 14 May 2015 15:55:20 +0200
+ -- Holger Levsen <holger@debian.org>  Thu, 14 May 2015 16:25:30 +0200
 
 pxz (4.999.99~beta3+git659fc9b-3) unstable; urgency=medium
 
