--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-pxz (4.999.99~beta4+gitae80846-2) UNRELEASED; urgency=medium
+pxz (4.999.99~beta4+gitae80846-2) unstable; urgency=medium
 
   * Modify debian/patches/reproducible-build.patch to use the date in UTC to
     avoid time zone differences. 
 
- -- Holger Levsen <holger@debian.org>  Fri, 15 May 2015 11:01:31 +0000
+ -- Holger Levsen <holger@debian.org>  Fri, 15 May 2015 11:03:16 +0000
 
 pxz (4.999.99~beta4+gitae80846-1) unstable; urgency=medium
 
