--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-pxz (4.999.99~beta4+gitae80846-3) UNRELEASED; urgency=medium
+pxz (4.999.99~beta5+gitfcfea93-1) UNRELEASED; urgency=medium
 
+  * New upstream version.
   * Fix debian/patches/reproducible-build.patch to actually use the time from
     dpkg-parsechangelog and not the system time. Thanks to Reiner Herrman for
     the patch! (Closes: #805778)
