--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-pxz (4.999.99~beta5+gitfcfea93-1) UNRELEASED; urgency=medium
+pxz (4.999.99~beta5+gitfcfea93-1) unstable; urgency=medium
 
   * New upstream version.
   * Fix debian/patches/reproducible-build.patch to actually use the time from
     dpkg-parsechangelog and not the system time. Thanks to Reiner Herrman for
     the patch! (Closes: #805778)
 
- -- Holger Levsen <holger@debian.org>  Wed, 25 Nov 2015 20:06:58 +0100
+ -- Holger Levsen <holger@debian.org>  Fri, 27 Nov 2015 12:42:56 +0100
 
 pxz (4.999.99~beta4+gitae80846-2) unstable; urgency=medium
 
