--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pxz (4.999.99~beta5+gitfcfea93-2) UNRELEASED; urgency=medium
+
+  * Bump Standards-Version to 4.1.1, no changes needed.
+
+ -- Holger Levsen <holger@debian.org>  Fri, 29 Sep 2017 22:39:53 +0200
+
 pxz (4.999.99~beta5+gitfcfea93-1) unstable; urgency=medium
 
   * New upstream version.
