--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 pxz (4.999.99~beta5+gitfcfea93-2) UNRELEASED; urgency=medium
 
   * Bump Standards-Version to 4.1.1, no changes needed.
+  * Bump debian/compat to 10 and build-depend on debhelper >= 10.2.5~.
 
  -- Holger Levsen <holger@debian.org>  Fri, 29 Sep 2017 22:39:53 +0200
 
