--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-pxz (4.999.99~beta5+gitfcfea93-2) UNRELEASED; urgency=medium
+pxz (4.999.99~beta5+gitfcfea93-2) unstable; urgency=medium
 
   * Bump Standards-Version to 4.1.1, no changes needed.
   * Bump debian/compat to 10 and build-depend on debhelper >= 10.2.5~.
   * Switch Vcs-Browser URL to use /git/ instead of /gitweb/.
 
- -- Holger Levsen <holger@debian.org>  Fri, 29 Sep 2017 22:39:53 +0200
+ -- Holger Levsen <holger@debian.org>  Fri, 29 Sep 2017 22:46:39 +0200
 
 pxz (4.999.99~beta5+gitfcfea93-1) unstable; urgency=medium
 
